# dsa-c-core

./: .gitignore  CMakeLists.txt  README.md
include/c/algorithms/: calculator.h  merge_sort.h
include/c/data-structures/: list.h  stack.h
include/cpp/algorithms/: fast_exp.hpp  merge_sort.hpp  merge_sort_buffer.hpp  merge_sort_rotations.hpp  quick_sort.hpp
src/c/algorithms/: CMakeLists.txt  calculator.c  merge_sort.c
src/c/data-structures/: CMakeLists.txt  list.c  stack.c
src/cpp/algorithms/: CMakeLists.txt  fast_exp.cpp  merge_sort.cpp  merge_sort_buffer.cpp  merge_sort_rotations.cpp  quick_sort.cpp
src/cpp/data-structures/: CMakeLists.txt
tests/c/: CMakeLists.txt  calculator_test.c  list_test.c  merge_sort_test.c
tests/cpp/: CMakeLists.txt  fast_exp_test.cpp  merge_sort_buffer_test.cpp  test_dummy.cpp
